--- a/style.css
+++ b/style.css
@@ -1,1 +1,89 @@
+#nav-box {
+    background-color: rgb(48, 44, 44);
+}
 
+
+#nav-box li {
+    text-align: center;
+    display: inline-block;
+    margin: 2%;
+    margin-left: 3%;
+    margin-top: 4%;
+    margin-bottom: 4%;
+    font-size: 20px;
+    color: gray;
+    text-decoration: none;
+
+}
+
+#nav-img {
+    float: left;
+    margin-top: 11px;
+    margin-left: 10%;
+    display: inline-block;
+    color: black;
+}
+
+#hero-photo {
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 3%;
+}
+
+#sub-banner {
+    display: inline-block;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+#img2 {
+    margin-left: 25px;
+}
+
+#img3 {
+    margin-left: 25px;
+}
+
+#feature-banner {
+    margin-left: 10%; 
+    margin-right: 10%;
+    margin-bottom: 3%;
+}
+
+#feature-banner h2 {
+    font-weight: bold;
+    margin-bottom: 1%;
+}
+
+#feature-banner p {
+    font-size: 20px;
+    word-spacing: 5px;
+    line-height: 1.4;
+    overflow-y: scroll;
+    height: 340px;
+}
+
+#feature-banner button {
+    color: black;
+    border-radius: none;
+    border: none;
+    background-color: black;
+    color: white;
+    padding: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
+#fbimg1 {
+    float: left;
+    margin-right: 25px;
+    margin-bottom: 3%;
+}
+
+footer {
+    background-color: black;
+    height: 100px;
+    margin-top: 3%;
+}
